# mcp-panther

./: .env.example  .env.sample  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  host.json  main.py  manifest.json  mcp_config.env  mcp_panther_module.py  new-file-to-test.txt  panther_mcp_server.py  pyproject.toml  requirements-bundle.txt  requirements.txt  run_panther_mcp.py  startup.sh
.cursor/rules/: cursor-response-explanation.mdc  cursor-response-mermaid-diagrams.mdc  cursor-response-minimize-unnecessary-changes.mdc  cursor-response-no-new-packages.mdc  cursor-response-scope-limited.mdc  cursor-response-validation.mdc  cursor-response-verification.mdc  cursor-rule-location.mdc  cursor-rule-schema.mdc  cursor-rule-writing-guidelines.mdc  git-practices.mdc  git-repository-structure.mdc  golang-style-concurrency.mdc  golang-style-table-test-map.mdc  golang-style.mdc  python-code-style.mdc  typescript-code-style.mdc
.github/: CODEOWNERS
.github/scripts/: lint-invisible.py
.github/workflows/: code-quality.yml  invisible-characters.yml  release-publish.yml  test.yml  version-bump.yml
agent/: README.md  agent.py  agent_convo.py  chatbot.py  spl_converter.py
azure_streaming_mcp/: .funcignore  README.md  function_app.py  host.json  local.settings.json.template  panther_mcp_app.py  requirements.txt
docs/: azure-functions-deployment.md
local_streaming_mcp/: README.md  server.py  test_streaming_client.py
mcp_panther/: server.py
scripts/: bundle-deps.sh  test-bundled-setup.sh
src/: README.md
tests/: conftest.py  test_server.py
(+48 files in other folders)
